--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "@remix-run/node": "^2.10.0",
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/ssr": "^0.4.0",
-    "@supabase/supabase-js": "^2.44.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.2.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
