--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "icons": "npx @svgr/cli --out-dir app/components/icons -- app/icons"
   },
   "dependencies": {
+    "@conform-to/react": "^1.1.5",
+    "@conform-to/zod": "^1.1.5",
     "@dicebear/collection": "^9.0.1",
     "@dicebear/core": "^9.0.1",
     "@hookform/resolvers": "^3.7.0",
@@ -31,7 +33,6 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
