--- a/package.json
+++ b/package.json
@@ -1,71 +1,72 @@
 {
-  "name": "billixer-web",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
-    "icons": "npx @svgr/cli --out-dir app/components/icons -- app/icons"
-  },
-  "dependencies": {
-    "@conform-to/react": "^1.1.5",
-    "@conform-to/zod": "^1.1.5",
-    "@dicebear/collection": "^9.0.1",
-    "@dicebear/core": "^9.0.1",
-    "@hookform/resolvers": "^3.7.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@remix-run/node": "^2.10.0",
-    "@remix-run/react": "^2.10.0",
-    "@remix-run/serve": "^2.10.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "firebase": "^10.12.4",
-    "firebase-admin": "^12.2.0",
-    "isbot": "^4.1.0",
-    "lucide-react": "^0.400.0",
-    "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.10.0",
-    "@svgr/cli": "^8.1.0",
-    "@svgr/plugin-jsx": "^8.1.0",
-    "@svgr/plugin-prettier": "^8.1.0",
-    "@svgr/plugin-svgo": "^8.1.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "npm-run-all": "^4.1.5",
-    "npm-watch": "^0.13.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+    "name": "billixer-web",
+    "private": true,
+    "sideEffects": false,
+    "type": "module",
+    "scripts": {
+        "build": "remix vite:build",
+        "dev": "remix vite:dev",
+        "dev:host": "remix vite:dev --host",
+        "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+        "start": "remix-serve ./build/server/index.js",
+        "typecheck": "tsc",
+        "icons": "npx @svgr/cli --out-dir app/components/icons -- app/icons"
+    },
+    "dependencies": {
+        "@conform-to/react": "^1.1.5",
+        "@conform-to/zod": "^1.1.5",
+        "@dicebear/collection": "^9.0.1",
+        "@dicebear/core": "^9.0.1",
+        "@hookform/resolvers": "^3.7.0",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.0",
+        "@remix-run/node": "^2.10.0",
+        "@remix-run/react": "^2.10.0",
+        "@remix-run/serve": "^2.10.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "firebase": "^10.12.4",
+        "firebase-admin": "^12.2.0",
+        "isbot": "^4.1.0",
+        "lucide-react": "^0.400.0",
+        "next-themes": "^0.3.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sonner": "^1.5.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@remix-run/dev": "^2.10.0",
+        "@svgr/cli": "^8.1.0",
+        "@svgr/plugin-jsx": "^8.1.0",
+        "@svgr/plugin-prettier": "^8.1.0",
+        "@svgr/plugin-svgo": "^8.1.0",
+        "@types/react": "^18.2.20",
+        "@types/react-dom": "^18.2.7",
+        "@typescript-eslint/eslint-plugin": "^6.7.4",
+        "@typescript-eslint/parser": "^6.7.4",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8.38.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "npm-run-all": "^4.1.5",
+        "npm-watch": "^0.13.0",
+        "postcss": "^8.4.38",
+        "prettier": "^3.3.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "tailwindcss": "^3.4.4",
+        "typescript": "^5.1.6",
+        "vite": "^5.1.0",
+        "vite-tsconfig-paths": "^4.2.1"
+    },
+    "engines": {
+        "node": ">=20.0.0"
+    }
 }
