--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "build": "remix vite:build",
+        "emulate": "firebase emulators:start",
         "dev": "remix vite:dev",
         "dev:host": "remix vite:dev --host",
         "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
